--- a/blogs/post-8/index.html
+++ b/blogs/post-8/index.html
@@ -160,13 +160,13 @@
 <li class=recent-post-item>
 <div class=media>
 <div class="media-body mr-2">
-<h5><a href=/news-website-template/news/post-7/>测试新闻7</a></h5>
+<h5><a href=/news-website-template/news/post-5/>测试新闻5</a></h5>
 <span class=card-meta>
-<span class=card-meta-date>Feb 04, 2021</span>
+<span class=card-meta-date>Feb 02, 2021</span>
 </span>
 </div>
-<a href=/news-website-template/news/post-7/ class=recent-post-image>
-<img loading=lazy class="img-fluid rounded-circle" src=/news-website-template/images/post/07.jpg>
+<a href=/news-website-template/news/post-5/ class=recent-post-image>
+<img loading=lazy class="img-fluid rounded-circle" src=/news-website-template/images/post/05.jpg>
 </a>
 </div>
 </li>
@@ -176,8 +176,8 @@
 <span class=widget-title>分类</span>
 <ul class="sidebar-post-categories list-unstyled">
 <li><a href=/news-website-template/categories/daily-life>Daily life <span>7</span></a></li>
-<li><a href=/news-website-template/categories/design>Design <span>2</span></a></li>
-<li><a href=/news-website-template/categories/lifestyle>Lifestyle <span>9</span></a></li>
+<li><a href=/news-website-template/categories/design>Design <span>1</span></a></li>
+<li><a href=/news-website-template/categories/lifestyle>Lifestyle <span>8</span></a></li>
 <li><a href=/news-website-template/categories/sports>Sports <span>2</span></a></li>
 </ul>
 </div>
@@ -263,16 +263,17 @@
 <div class="col-lg-4 col-md-4 col-sm-6">
 <article class="card post-card">
 <div class="post-slider slider-sm">
-<div><img loading=lazy class=w-100 src=/news-website-template/images/post/07.jpg alt></div>
+<div><img loading=lazy class=w-100 src=/news-website-template/images/post/05.jpg alt></div>
 </div>
 <div class="card-body mb-3">
 <ul class="card-meta-tag list-inline mb-1">
-<li class=list-inline-item><a href=/news-website-templatetags/startup>Startup</a></li>
+<li class=list-inline-item><a href=/news-website-templatetags/charity>Charity</a></li>
+<li class=list-inline-item><a href=/news-website-templatetags/donation>Donation</a></li>
 </ul>
 <h3 class="h4 mb-2">
-<a class=post-title href=/news-website-template/news/post-7/ title=测试新闻7>测试新闻7</a>
+<a class=post-title href=/news-website-template/news/post-5/ title=测试新闻5>测试新闻5</a>
 </h3>
-<p class=mb-0>Photography is an invaluable medium that allows us to capture the …</p>
+<p class=mb-0>A balloon is a flexible bag that can be inflated with a gas, such as …</p>
 </div>
 <div class=card-footer>
 <ul class="card-meta list-inline mb-0">
@@ -281,7 +282,7 @@
 <a href=/news-website-template/about/ class=card-meta-author>这是新闻</a>
 </li>
 <li class=list-inline-item>
-<span class=card-meta-date>Feb 04, 2021</span>
+<span class=card-meta-date>Feb 02, 2021</span>
 </li>
 </ul>
 </div>
