--- a/blogs/post-5/index.html
+++ b/blogs/post-5/index.html
@@ -126,7 +126,7 @@
 <img loading=lazy class="mb-4 rounded-circle w-100" style=max-width:150px src=/news-website-template/images/InterImm_logo.png alt=Author>
 <p class="text-uppercase small mb-2">我的名字</p>
 <h1 class="h4 text-primary font-primary mb-3">这是新闻</h1>
-<div class="mb-0 mx-auto" style=max-width:460px>这个就是描述 <a href=/news-website-template/about/ aria-label="About me" class="text-underline d-inline-block">继续阅读</a></div>
+<div class="mb-0 mx-auto" style=max-width:460px>阿巴阿巴 <a href=/news-website-template/about/ aria-label="About me" class="text-underline d-inline-block">继续阅读</a></div>
 </div>
 <div class=widget>
 <span class=widget-title>最近内容</span>
