--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <img loading=lazy class="mb-4 rounded-circle w-100" style=max-width:280px src=/news-website-template/images/InterImm_logo.png alt=Author>
 <p class="text-uppercase small mb-2">我的名字</p>
 <h1 class="h3 text-primary font-primary mb-3">这是新闻</h1>
-<div class="mb-0 mx-auto" style=max-width:460px>这个就是描述 <a href=/news-website-template/about/ aria-label="About me" class="text-underline d-inline-block">继续阅读</a></div>
+<div class="mb-0 mx-auto" style=max-width:460px>阿巴阿巴 <a href=/news-website-template/about/ aria-label="About me" class="text-underline d-inline-block">继续阅读</a></div>
 </div>
 </div>
 <div class="col-lg-8 col-xl-9">
