deploy: 8ebd631f2d6be666fed453a352eef7c55b99b2d5

--- a/blogs/post-8/index.html
+++ b/blogs/post-8/index.html
@@ -184,6 +184,8 @@
 <li class=list-inline-item><a href=/ivychere.github.io/tags/retro>Retro</a></li>
 <li class=list-inline-item><a href=/ivychere.github.io/tags/startup>Startup</a></li>
 <li class=list-inline-item><a href=/ivychere.github.io/tags/toy>Toy</a></li>
+<li class=list-inline-item><a href=/ivychere.github.io/tags/%e6%98%9f%e9%99%85%e7%a7%bb%e6%b0%91%e4%b8%ad%e5%bf%83iia>星际移民中心iia</a></li>
+<li class=list-inline-item><a href=/ivychere.github.io/tags/%e7%81%ab%e6%98%9f%e7%a7%bb%e6%b0%91>火星移民</a></li>
 </ul>
 </div></div>
 </div>
