deploy: 97cf0bfad125d1a51c83883d68bfbb940ca8bc64

--- a/blogs/post-8/index.html
+++ b/blogs/post-8/index.html
@@ -157,6 +157,18 @@
 </a>
 </div>
 </li>
+<li class=recent-post-item>
+<div class=media>
+<div class="media-body mr-2">
+<h5><a href=/news/uai/>联合小行星垄断行径遭曝光： UAI恐陷入信誉危机</a></h5>
+<span class=card-meta>
+<span class=card-meta-date>Jan 21, 2022</span>
+</span>
+</div>
+<a href=/news/uai/ class=recent-post-image>
+</a>
+</div>
+</li>
 </ul>
 </div>
 <div class=widget>
@@ -184,8 +196,11 @@
 <li class=list-inline-item><a href=tags/retro>Retro</a></li>
 <li class=list-inline-item><a href=tags/startup>Startup</a></li>
 <li class=list-inline-item><a href=tags/toy>Toy</a></li>
+<li class=list-inline-item><a href=tags/%e5%9b%bd%e9%99%85%e7%ab%9e%e4%ba%89%e7%bd%91%e7%bb%9cicn>国际竞争网络icn</a></li>
+<li class=list-inline-item><a href=tags/%e5%9e%84%e6%96%ad>垄断</a></li>
 <li class=list-inline-item><a href=tags/%e6%98%9f%e9%99%85%e7%a7%bb%e6%b0%91%e4%b8%ad%e5%bf%83iia>星际移民中心iia</a></li>
 <li class=list-inline-item><a href=tags/%e7%81%ab%e6%98%9f%e7%a7%bb%e6%b0%91>火星移民</a></li>
+<li class=list-inline-item><a href=tags/%e8%81%94%e5%90%88%e8%a1%8c%e6%98%9f/%e8%81%94%e5%90%88%e5%b0%8f%e8%a1%8c%e6%98%9fupi/uai>联合行星 联合小行星upi uai</a></li>
 </ul>
 </div></div>
 </div>
@@ -244,6 +259,33 @@
 </li>
 <li class=list-inline-item>
 <span class=card-meta-date>Jan 02, 2021</span>
+</li>
+</ul>
+</div>
+</article>
+</div>
+<div class="col-lg-4 col-md-4 col-sm-6">
+<article class="card post-card">
+<div class="card-body mb-3">
+<ul class="card-meta-tag list-inline mb-1">
+<li class=list-inline-item><a href=tags/%E5%9E%84%E6%96%AD>垄断</a></li>
+<li class=list-inline-item><a href=tags/%E5%9B%BD%E9%99%85%E7%AB%9E%E4%BA%89%E7%BD%91%E7%BB%9Cicn>国际竞争网络(ICN)</a></li>
+<li class=list-inline-item><a href=tags/%E8%81%94%E5%90%88%E8%A1%8C%E6%98%9F/%E8%81%94%E5%90%88%E5%B0%8F%E8%A1%8C%E6%98%9Fupi/uai>联合行星/联合小行星(UPI/UAI )</a></li>
+</ul>
+<h3 class="h4 mb-2">
+<a class=post-title href=/news/uai/ title="联合小行星垄断行径遭曝光： UAI恐陷入信誉危机">联合小行星垄断行径遭曝光： UAI恐陷入信誉危机</a>
+</h3>
+<p class=mb-0>星辰社 2057年11月22日 电
+国际竞争网络（ ICN ）11月底的报告披露，联合小行星（ UAI ）近年的垄断行径日益猖狂。为维护良好 …</p>
+</div>
+<div class=card-footer>
+<ul class="card-meta list-inline mb-0">
+<li class=list-inline-item>
+<span class=text-light>by:</span>
+<a href=/about/ class=card-meta-author>这是新闻</a>
+</li>
+<li class=list-inline-item>
+<span class=card-meta-date>Jan 21, 2022</span>
 </li>
 </ul>
 </div>
