--- a/index.html
+++ b/index.html
@@ -96,6 +96,33 @@
 <div class="col-lg-8 col-xl-9">
 <div class=section>
 <div class=row>
+<div class="col-xl-4 col-sm-6">
+<article class="card post-card">
+<div class="card-body mb-3">
+<ul class="card-meta-tag list-inline mb-1">
+<li class=list-inline-item><a href=tags/%E5%9E%84%E6%96%AD>垄断</a></li>
+<li class=list-inline-item><a href=tags/%E5%9B%BD%E9%99%85%E7%AB%9E%E4%BA%89%E7%BD%91%E7%BB%9Cicn>国际竞争网络(ICN)</a></li>
+<li class=list-inline-item><a href=tags/%E8%81%94%E5%90%88%E8%A1%8C%E6%98%9F/%E8%81%94%E5%90%88%E5%B0%8F%E8%A1%8C%E6%98%9Fupi/uai>联合行星/联合小行星(UPI/UAI )</a></li>
+</ul>
+<h3 class="h4 mb-2">
+<a class=post-title href=/news/uai/ title="联合小行星垄断行径遭曝光： UAI恐陷入信誉危机">联合小行星垄断行径遭曝光： UAI恐陷入信誉危机</a>
+</h3>
+<p class=mb-0>星辰社 2057年11月22日 电
+国际竞争网络（ ICN ）11月底的报告披露，联合小行星（ UAI ）近年的垄断行径日益猖狂。为维护良好 …</p>
+</div>
+<div class=card-footer>
+<ul class="card-meta list-inline mb-0">
+<li class=list-inline-item>
+<span class=text-light>by:</span>
+<a href=/about/ class=card-meta-author>这是新闻</a>
+</li>
+<li class=list-inline-item>
+<span class=card-meta-date>Jan 21, 2022</span>
+</li>
+</ul>
+</div>
+</article>
+</div>
 </div>
 <div class=row>
 <div class=col-12>
