--- a/index.html
+++ b/index.html
@@ -100,6 +100,34 @@
 <article class="card post-card">
 <div class="card-body mb-3">
 <ul class="card-meta-tag list-inline mb-1">
+<li class=list-inline-item><a href=tags/%E7%81%AB%E6%98%9F%E7%A7%BB%E6%B0%91>火星移民</a></li>
+<li class=list-inline-item><a href=tags/%E6%98%9F%E9%99%85%E7%A7%BB%E6%B0%91%E4%B8%AD%E5%BF%83iic>星际移民中心(IIC)</a></li>
+<li class=list-inline-item><a href=tags/%E6%98%9F%E9%99%85%E7%A7%BB%E6%B0%91%E5%B1%80iia>星际移民局(IIA)</a></li>
+<li class=list-inline-item><a href=tags/%E8%81%94%E5%90%88%E5%9B%BD>联合国</a></li>
+</ul>
+<h3 class="h4 mb-2">
+<a class=post-title href=/news/%E8%81%94%E5%90%88%E5%9B%BD%E5%86%B3%E5%AE%9A%E6%88%90%E7%AB%8B%E6%98%9F%E9%99%85%E7%A7%BB%E6%B0%91%E5%B1%80/ title=联合国决定成立星际移民局>联合国决定成立星际移民局</a>
+</h3>
+<p class=mb-0>星辰社 纽约联合国总部 2062年7月23日 电
+联合国地外天体规划署当地时间7月23日上午召开记者会，宣布根据联合国大 …</p>
+</div>
+<div class=card-footer>
+<ul class="card-meta list-inline mb-0">
+<li class=list-inline-item>
+<span class=text-light>by:</span>
+<a href=/about/ class=card-meta-author>这是新闻</a>
+</li>
+<li class=list-inline-item>
+<span class=card-meta-date>Jan 21, 2022</span>
+</li>
+</ul>
+</div>
+</article>
+</div>
+<div class="col-xl-4 col-sm-6">
+<article class="card post-card">
+<div class="card-body mb-3">
+<ul class="card-meta-tag list-inline mb-1">
 <li class=list-inline-item><a href=tags/%E5%9E%84%E6%96%AD>垄断</a></li>
 <li class=list-inline-item><a href=tags/%E5%9B%BD%E9%99%85%E7%AB%9E%E4%BA%89%E7%BD%91%E7%BB%9Cicn>国际竞争网络(ICN)</a></li>
 <li class=list-inline-item><a href=tags/%E8%81%94%E5%90%88%E8%A1%8C%E6%98%9F/%E8%81%94%E5%90%88%E5%B0%8F%E8%A1%8C%E6%98%9Fupi/uai>联合行星/联合小行星(UPI/UAI )</a></li>
