--- a/blogs/post-8/index.html
+++ b/blogs/post-8/index.html
@@ -160,12 +160,12 @@
 <li class=recent-post-item>
 <div class=media>
 <div class="media-body mr-2">
-<h5><a href=/news/%E8%81%94%E5%90%88%E5%9B%BD%E5%86%B3%E5%AE%9A%E6%88%90%E7%AB%8B%E6%98%9F%E9%99%85%E7%A7%BB%E6%B0%91%E5%B1%80/>联合国决定成立星际移民局</a></h5>
+<h5><a href=/news/%E7%AE%80%E8%AE%AF-%E7%BD%97%E9%A9%AC%E6%95%99%E5%AE%97%E8%AE%BF%E9%97%AE%E4%BC%8A%E5%B8%8C%E5%9C%B0-%E5%B9%B6%E5%8F%91%E8%A1%A8%E6%BC%94%E8%AE%B2/>简讯：罗马教宗访问伊希地，并发表演讲</a></h5>
 <span class=card-meta>
 <span class=card-meta-date>Jan 21, 2022</span>
 </span>
 </div>
-<a href=/news/%E8%81%94%E5%90%88%E5%9B%BD%E5%86%B3%E5%AE%9A%E6%88%90%E7%AB%8B%E6%98%9F%E9%99%85%E7%A7%BB%E6%B0%91%E5%B1%80/ class=recent-post-image>
+<a href=/news/%E7%AE%80%E8%AE%AF-%E7%BD%97%E9%A9%AC%E6%95%99%E5%AE%97%E8%AE%BF%E9%97%AE%E4%BC%8A%E5%B8%8C%E5%9C%B0-%E5%B9%B6%E5%8F%91%E8%A1%A8%E6%BC%94%E8%AE%B2/ class=recent-post-image>
 </a>
 </div>
 </li>
@@ -270,17 +270,11 @@
 <div class="col-lg-4 col-md-4 col-sm-6">
 <article class="card post-card">
 <div class="card-body mb-3">
-<ul class="card-meta-tag list-inline mb-1">
-<li class=list-inline-item><a href=tags/%E7%81%AB%E6%98%9F%E7%A7%BB%E6%B0%91>火星移民</a></li>
-<li class=list-inline-item><a href=tags/%E6%98%9F%E9%99%85%E7%A7%BB%E6%B0%91%E4%B8%AD%E5%BF%83iic>星际移民中心(IIC)</a></li>
-<li class=list-inline-item><a href=tags/%E6%98%9F%E9%99%85%E7%A7%BB%E6%B0%91%E5%B1%80iia>星际移民局(IIA)</a></li>
-<li class=list-inline-item><a href=tags/%E8%81%94%E5%90%88%E5%9B%BD>联合国</a></li>
-</ul>
 <h3 class="h4 mb-2">
-<a class=post-title href=/news/%E8%81%94%E5%90%88%E5%9B%BD%E5%86%B3%E5%AE%9A%E6%88%90%E7%AB%8B%E6%98%9F%E9%99%85%E7%A7%BB%E6%B0%91%E5%B1%80/ title=联合国决定成立星际移民局>联合国决定成立星际移民局</a>
+<a class=post-title href=/news/%E7%AE%80%E8%AE%AF-%E7%BD%97%E9%A9%AC%E6%95%99%E5%AE%97%E8%AE%BF%E9%97%AE%E4%BC%8A%E5%B8%8C%E5%9C%B0-%E5%B9%B6%E5%8F%91%E8%A1%A8%E6%BC%94%E8%AE%B2/ title=简讯：罗马教宗访问伊希地，并发表演讲>简讯：罗马教宗访问伊希地，并发表演讲</a>
 </h3>
-<p class=mb-0>星辰社 纽约联合国总部 2062年7月23日 电
-联合国地外天体规划署当地时间7月23日上午召开记者会，宣布根据联合国大 …</p>
+<p class=mb-0>星辰社 伊希地 2133年12月26日（火星88年1月10日） 电
+罗马时间圣诞节当天（火星88年1月10日），罗马教宗盖乌斯二抵达伊希地， …</p>
 </div>
 <div class=card-footer>
 <ul class="card-meta list-inline mb-0">
