--- a/blogs/post-6/index.html
+++ b/blogs/post-6/index.html
@@ -159,12 +159,12 @@
 <li class=recent-post-item>
 <div class=media>
 <div class="media-body mr-2">
-<h5><a href=/news/%E5%A5%87%E7%82%B9%E5%9F%8E%E7%AE%A1%E7%90%86%E5%B1%80%E6%8F%90%E5%87%BA%E5%BB%BA%E8%AE%AE-%E6%8E%A8%E5%8A%A8%E5%99%A8%E5%AE%98%E5%86%9C%E5%9C%BA%E5%90%88%E6%B3%95%E5%8C%96/>奇点城管理局提出建议，推动器官农场合法化</a></h5>
+<h5><a href=/news/%E5%9B%9B%E5%A4%A7%E5%95%86%E4%BC%9A%E5%90%88%E5%B9%B6/>四大商会合并</a></h5>
 <span class=card-meta>
 <span class=card-meta-date>Jan 21, 2022</span>
 </span>
 </div>
-<a href=/news/%E5%A5%87%E7%82%B9%E5%9F%8E%E7%AE%A1%E7%90%86%E5%B1%80%E6%8F%90%E5%87%BA%E5%BB%BA%E8%AE%AE-%E6%8E%A8%E5%8A%A8%E5%99%A8%E5%AE%98%E5%86%9C%E5%9C%BA%E5%90%88%E6%B3%95%E5%8C%96/ class=recent-post-image>
+<a href=/news/%E5%9B%9B%E5%A4%A7%E5%95%86%E4%BC%9A%E5%90%88%E5%B9%B6/ class=recent-post-image>
 </a>
 </div>
 </li>
@@ -196,17 +196,22 @@
 <li class=list-inline-item><a href=tags/startup>Startup</a></li>
 <li class=list-inline-item><a href=tags/toy>Toy</a></li>
 <li class=list-inline-item><a href=tags/%e5%99%a8%e5%ae%98%e5%9f%b9%e8%82%b2>器官培育</a></li>
+<li class=list-inline-item><a href=tags/%e5%9b%9b%e5%a4%a7%e5%95%86%e4%bc%9a>四大商会</a></li>
 <li class=list-inline-item><a href=tags/%e5%9b%bd%e9%99%85%e7%ab%9e%e4%ba%89%e7%bd%91%e7%bb%9cicn>国际竞争网络icn</a></li>
 <li class=list-inline-item><a href=tags/%e5%9e%84%e6%96%ad>垄断</a></li>
 <li class=list-inline-item><a href=tags/%e5%a5%87%e7%82%b9%e5%9f%8e>奇点城</a></li>
+<li class=list-inline-item><a href=tags/%e5%ae%87%e5%ae%99%e5%8d%ab%e6%98%9f%e9%80%9a%e4%bf%a1%e7%bb%84%e7%bb%87unisat>宇宙卫星通信组织unisat</a></li>
 <li class=list-inline-item><a href=tags/%e5%b0%98%e6%9a%b4>尘暴</a></li>
 <li class=list-inline-item><a href=tags/%e6%98%9f%e9%99%85%e7%a7%bb%e6%b0%91%e4%b8%ad%e5%bf%83iia>星际移民中心iia</a></li>
 <li class=list-inline-item><a href=tags/%e6%98%9f%e9%99%85%e7%a7%bb%e6%b0%91%e4%b8%ad%e5%bf%83iic>星际移民中心iic</a></li>
 <li class=list-inline-item><a href=tags/%e6%98%9f%e9%99%85%e7%a7%bb%e6%b0%91%e5%b1%80iia>星际移民局iia</a></li>
 <li class=list-inline-item><a href=tags/%e7%81%ab%e6%98%9f%e7%a7%bb%e6%b0%91>火星移民</a></li>
+<li class=list-inline-item><a href=tags/%e8%81%94%e5%90%88%e5%8f%91%e5%b0%84%e5%90%8c%e7%9b%9fula>联合发射同盟ula</a></li>
 <li class=list-inline-item><a href=tags/%e8%81%94%e5%90%88%e5%9b%bd>联合国</a></li>
 <li class=list-inline-item><a href=tags/%e8%81%94%e5%90%88%e8%a1%8c%e6%98%9f/%e8%81%94%e5%90%88%e5%b0%8f%e8%a1%8c%e6%98%9fupi/uai>联合行星 联合小行星upi uai</a></li>
+<li class=list-inline-item><a href=tags/%e8%81%94%e5%90%88%e8%a1%8c%e6%98%9fupi>联合行星upi</a></li>
 <li class=list-inline-item><a href=tags/%e8%a7%86%e7%95%8c%e5%9f%8e>视界城</a></li>
+<li class=list-inline-item><a href=tags/%e8%bd%a8%e9%81%93%e6%97%85%e6%b8%b8%e5%b1%80orbita>轨道旅游局orbita</a></li>
 </ul>
 </div></div>
 </div>
@@ -274,14 +279,20 @@
 <article class="card post-card">
 <div class="card-body mb-3">
 <ul class="card-meta-tag list-inline mb-1">
-<li class=list-inline-item><a href=tags/%E5%99%A8%E5%AE%98%E5%9F%B9%E8%82%B2>器官培育</a></li>
-<li class=list-inline-item><a href=tags/%E5%A5%87%E7%82%B9%E5%9F%8E>奇点城</a></li>
+<li class=list-inline-item><a href=tags/%E5%9B%BD%E9%99%85%E7%AB%9E%E4%BA%89%E7%BD%91%E7%BB%9Cicn>国际竞争网络(ICN)</a></li>
+<li class=list-inline-item><a href=tags/%E5%9E%84%E6%96%AD>垄断</a></li>
+<li class=list-inline-item><a href=tags/%E5%9B%9B%E5%A4%A7%E5%95%86%E4%BC%9A>四大商会</a></li>
+<li class=list-inline-item><a href=tags/%E8%BD%A8%E9%81%93%E6%97%85%E6%B8%B8%E5%B1%80orbita>轨道旅游局(OrbiTA)</a></li>
+<li class=list-inline-item><a href=tags/%E8%81%94%E5%90%88%E5%8F%91%E5%B0%84%E5%90%8C%E7%9B%9Fula>联合发射同盟(ULA)</a></li>
+<li class=list-inline-item><a href=tags/%E5%AE%87%E5%AE%99%E5%8D%AB%E6%98%9F%E9%80%9A%E4%BF%A1%E7%BB%84%E7%BB%87unisat>宇宙卫星通信组织(Unisat)</a></li>
+<li class=list-inline-item><a href=tags/%E8%81%94%E5%90%88%E8%A1%8C%E6%98%9F/%E8%81%94%E5%90%88%E5%B0%8F%E8%A1%8C%E6%98%9Fupi/uai>联合行星/联合小行星(UPI/UAI)</a></li>
+<li class=list-inline-item><a href=tags/%E8%81%94%E5%90%88%E8%A1%8C%E6%98%9Fupi>联合行星(UPI)</a></li>
 </ul>
 <h3 class="h4 mb-2">
-<a class=post-title href=/news/%E5%A5%87%E7%82%B9%E5%9F%8E%E7%AE%A1%E7%90%86%E5%B1%80%E6%8F%90%E5%87%BA%E5%BB%BA%E8%AE%AE-%E6%8E%A8%E5%8A%A8%E5%99%A8%E5%AE%98%E5%86%9C%E5%9C%BA%E5%90%88%E6%B3%95%E5%8C%96/ title=奇点城管理局提出建议，推动器官农场合法化>奇点城管理局提出建议，推动器官农场合法化</a>
+<a class=post-title href=/news/%E5%9B%9B%E5%A4%A7%E5%95%86%E4%BC%9A%E5%90%88%E5%B9%B6/ title=四大商会合并>四大商会合并</a>
 </h3>
-<p class=mb-0>星辰社 火星奇点城 2166年7月11日（火星105年8月16日） 电
-火星时间8月16日（地球7月11日），奇点管理局提出《管理局关于推进 …</p>
+<p class=mb-0>星辰社 2102年6月20日 电
+20日，联合行星（UPI）、宇宙卫星通信组织（Unisat）、联合发射同盟（ULA）、轨道旅游 …</p>
 </div>
 <div class=card-footer>
 <ul class="card-meta list-inline mb-0">
