deploy: e60ed31656c58e6c7df8e7a901c8b7f881415bea

--- a/about/index.html
+++ b/about/index.html
@@ -6,9 +6,9 @@
 <meta name=description content="这是一个">
 <meta name=author content="我是作者">
 <meta name=generator content="Hugo 0.89.4">
-<link rel="shortcut icon" href=images/favicon/favicon.ico type=image/x-icon>
-<link rel=icon href=images/favicon/favicon.ico type=image/x-icon>
-<meta property="og:image" content="images/InterImm_logo.png">
+<link rel="shortcut icon" href=/images/favicon/favicon.ico type=image/x-icon>
+<link rel=icon href=/images/favicon/favicon.ico type=image/x-icon>
+<meta property="og:image" content="/images/InterImm_logo.png">
 <meta property="og:title" content="关于">
 <meta property="og:description" content="这是一个">
 <meta property="og:type" content="article">
@@ -32,7 +32,7 @@
 </button>
 </div>
 <a class="navbar-brand mr-0" href=/>
-<img height=26px src=images/InterImm_logo.png alt=新闻>
+<img height=26px src=/images/InterImm_logo.png alt=新闻>
 </a>
 </div>
 <div class="d-none d-md-block">
@@ -92,7 +92,7 @@
 <div class="row align-items-end mb-4 mb-lg-5">
 <div class="col-xl-3 col-lg-4">
 <div class=pr-3>
-<img loading=lazy class=img-fluid style=max-width:250px src=images/InterImm_logo.png alt=Author>
+<img loading=lazy class=img-fluid style=max-width:250px src=/images/InterImm_logo.png alt=Author>
 </div>
 </div>
 <div class="col-lg-7 mt-5 mt-lg-0">
