--- a/blogs/index.html
+++ b/blogs/index.html
@@ -6,8 +6,8 @@
 <meta name=description content="meta description">
 <meta name=author content="我是作者">
 <meta name=generator content="Hugo 0.89.4">
-<link rel="shortcut icon" href=images/favicon/favicon.ico type=image/x-icon>
-<link rel=icon href=images/favicon/favicon.ico type=image/x-icon>
+<link rel="shortcut icon" href=/images/favicon/favicon.ico type=image/x-icon>
+<link rel=icon href=/images/favicon/favicon.ico type=image/x-icon>
 <meta property="og:title" content="All Blogs">
 <meta property="og:description" content="meta description">
 <meta property="og:type" content="website">
@@ -29,7 +29,7 @@
 </button>
 </div>
 <a class="navbar-brand mr-0" href=/>
-<img height=26px src=images/InterImm_logo.png alt=新闻>
+<img height=26px src=/images/InterImm_logo.png alt=新闻>
 </a>
 </div>
 <div class="d-none d-md-block">
@@ -96,14 +96,14 @@
 <article class="card post-card">
 <div class="card-body mb-3">
 <ul class="card-meta-tag list-inline mb-1">
-<li class=list-inline-item><a href=tags/%E5%9B%BD%E9%99%85%E7%AB%9E%E4%BA%89%E7%BD%91%E7%BB%9Cicn>国际竞争网络(ICN)</a></li>
-<li class=list-inline-item><a href=tags/%E5%9E%84%E6%96%AD>垄断</a></li>
-<li class=list-inline-item><a href=tags/%E5%9B%9B%E5%A4%A7%E5%95%86%E4%BC%9A>四大商会</a></li>
-<li class=list-inline-item><a href=tags/%E8%BD%A8%E9%81%93%E6%97%85%E6%B8%B8%E5%B1%80orbita>轨道旅游局(OrbiTA)</a></li>
-<li class=list-inline-item><a href=tags/%E8%81%94%E5%90%88%E5%8F%91%E5%B0%84%E5%90%8C%E7%9B%9Fula>联合发射同盟(ULA)</a></li>
-<li class=list-inline-item><a href=tags/%E5%AE%87%E5%AE%99%E5%8D%AB%E6%98%9F%E9%80%9A%E4%BF%A1%E7%BB%84%E7%BB%87unisat>宇宙卫星通信组织(Unisat)</a></li>
-<li class=list-inline-item><a href=tags/%E8%81%94%E5%90%88%E8%A1%8C%E6%98%9F/%E8%81%94%E5%90%88%E5%B0%8F%E8%A1%8C%E6%98%9Fupi/uai>联合行星/联合小行星(UPI/UAI)</a></li>
-<li class=list-inline-item><a href=tags/%E8%81%94%E5%90%88%E8%A1%8C%E6%98%9Fupi>联合行星(UPI)</a></li>
+<li class=list-inline-item><a href=/tags/%E5%9B%BD%E9%99%85%E7%AB%9E%E4%BA%89%E7%BD%91%E7%BB%9Cicn>国际竞争网络(ICN)</a></li>
+<li class=list-inline-item><a href=/tags/%E5%9E%84%E6%96%AD>垄断</a></li>
+<li class=list-inline-item><a href=/tags/%E5%9B%9B%E5%A4%A7%E5%95%86%E4%BC%9A>四大商会</a></li>
+<li class=list-inline-item><a href=/tags/%E8%BD%A8%E9%81%93%E6%97%85%E6%B8%B8%E5%B1%80orbita>轨道旅游局(OrbiTA)</a></li>
+<li class=list-inline-item><a href=/tags/%E8%81%94%E5%90%88%E5%8F%91%E5%B0%84%E5%90%8C%E7%9B%9Fula>联合发射同盟(ULA)</a></li>
+<li class=list-inline-item><a href=/tags/%E5%AE%87%E5%AE%99%E5%8D%AB%E6%98%9F%E9%80%9A%E4%BF%A1%E7%BB%84%E7%BB%87unisat>宇宙卫星通信组织(Unisat)</a></li>
+<li class=list-inline-item><a href=/tags/%E8%81%94%E5%90%88%E8%A1%8C%E6%98%9F/%E8%81%94%E5%90%88%E5%B0%8F%E8%A1%8C%E6%98%9Fupi/uai>联合行星/联合小行星(UPI/UAI)</a></li>
+<li class=list-inline-item><a href=/tags/%E8%81%94%E5%90%88%E8%A1%8C%E6%98%9Fupi>联合行星(UPI)</a></li>
 </ul>
 <h3 class="h4 mb-2">
 <a class=post-title href=/news/%E5%9B%9B%E5%A4%A7%E5%95%86%E4%BC%9A%E5%90%88%E5%B9%B6/ title=四大商会合并>四大商会合并</a>
@@ -128,8 +128,8 @@
 <article class="card post-card">
 <div class="card-body mb-3">
 <ul class="card-meta-tag list-inline mb-1">
-<li class=list-inline-item><a href=tags/%E5%99%A8%E5%AE%98%E5%9F%B9%E8%82%B2>器官培育</a></li>
-<li class=list-inline-item><a href=tags/%E5%A5%87%E7%82%B9%E5%9F%8E>奇点城</a></li>
+<li class=list-inline-item><a href=/tags/%E5%99%A8%E5%AE%98%E5%9F%B9%E8%82%B2>器官培育</a></li>
+<li class=list-inline-item><a href=/tags/%E5%A5%87%E7%82%B9%E5%9F%8E>奇点城</a></li>
 </ul>
 <h3 class="h4 mb-2">
 <a class=post-title href=/news/%E5%A5%87%E7%82%B9%E5%9F%8E%E7%AE%A1%E7%90%86%E5%B1%80%E6%8F%90%E5%87%BA%E5%BB%BA%E8%AE%AE-%E6%8E%A8%E5%8A%A8%E5%99%A8%E5%AE%98%E5%86%9C%E5%9C%BA%E5%90%88%E6%B3%95%E5%8C%96/ title=奇点城管理局提出建议，推动器官农场合法化>奇点城管理局提出建议，推动器官农场合法化</a>
@@ -154,10 +154,10 @@
 <article class="card post-card">
 <div class="card-body mb-3">
 <ul class="card-meta-tag list-inline mb-1">
-<li class=list-inline-item><a href=tags/%E6%98%9F%E9%99%85%E7%A7%BB%E6%B0%91%E4%B8%AD%E5%BF%83iic>星际移民中心(IIC)</a></li>
-<li class=list-inline-item><a href=tags/%E8%A7%86%E7%95%8C%E5%9F%8E>视界城</a></li>
-<li class=list-inline-item><a href=tags/%E5%A5%87%E7%82%B9%E5%9F%8E>奇点城</a></li>
-<li class=list-inline-item><a href=tags/%E5%B0%98%E6%9A%B4>尘暴</a></li>
+<li class=list-inline-item><a href=/tags/%E6%98%9F%E9%99%85%E7%A7%BB%E6%B0%91%E4%B8%AD%E5%BF%83iic>星际移民中心(IIC)</a></li>
+<li class=list-inline-item><a href=/tags/%E8%A7%86%E7%95%8C%E5%9F%8E>视界城</a></li>
+<li class=list-inline-item><a href=/tags/%E5%A5%87%E7%82%B9%E5%9F%8E>奇点城</a></li>
+<li class=list-inline-item><a href=/tags/%E5%B0%98%E6%9A%B4>尘暴</a></li>
 </ul>
 <h3 class="h4 mb-2">
 <a class=post-title href=/news/%E5%B0%98%E6%9A%B4-%E5%AD%90%E5%8D%88%E7%BA%BF-%E4%BB%8D%E5%9C%A8%E7%BB%A7%E7%BB%AD-%E6%90%9C%E6%95%91%E5%B7%A5%E4%BD%9C%E6%AD%A3%E7%B4%A7%E5%AF%86%E8%BF%9B%E8%A1%8C/ title=尘暴“子午线”仍在继续，搜救工作正紧密进行>尘暴“子午线”仍在继续，搜救工作正紧密进行</a>
@@ -182,8 +182,8 @@
 <article class="card post-card">
 <div class="card-body mb-3">
 <ul class="card-meta-tag list-inline mb-1">
-<li class=list-inline-item><a href=tags/%E7%81%AB%E6%98%9F%E7%A7%BB%E6%B0%91>火星移民</a></li>
-<li class=list-inline-item><a href=tags/%E6%98%9F%E9%99%85%E7%A7%BB%E6%B0%91%E5%B1%80iia>星际移民局(IIA)</a></li>
+<li class=list-inline-item><a href=/tags/%E7%81%AB%E6%98%9F%E7%A7%BB%E6%B0%91>火星移民</a></li>
+<li class=list-inline-item><a href=/tags/%E6%98%9F%E9%99%85%E7%A7%BB%E6%B0%91%E5%B1%80iia>星际移民局(IIA)</a></li>
 </ul>
 <h3 class="h4 mb-2">
 <a class=post-title href=/news/%E7%81%AB%E6%98%9F%E7%A7%BB%E6%B0%91%E7%99%BB%E8%AE%B0%E6%AD%A3%E5%BC%8F%E5%AF%B9%E5%85%AC%E4%BC%97%E5%BC%80%E6%94%BE/ title=火星移民登记正式对公众开放>火星移民登记正式对公众开放</a>
@@ -230,10 +230,10 @@
 <article class="card post-card">
 <div class="card-body mb-3">
 <ul class="card-meta-tag list-inline mb-1">
-<li class=list-inline-item><a href=tags/%E7%81%AB%E6%98%9F%E7%A7%BB%E6%B0%91>火星移民</a></li>
-<li class=list-inline-item><a href=tags/%E6%98%9F%E9%99%85%E7%A7%BB%E6%B0%91%E4%B8%AD%E5%BF%83iic>星际移民中心(IIC)</a></li>
-<li class=list-inline-item><a href=tags/%E6%98%9F%E9%99%85%E7%A7%BB%E6%B0%91%E5%B1%80iia>星际移民局(IIA)</a></li>
-<li class=list-inline-item><a href=tags/%E8%81%94%E5%90%88%E5%9B%BD>联合国</a></li>
+<li class=list-inline-item><a href=/tags/%E7%81%AB%E6%98%9F%E7%A7%BB%E6%B0%91>火星移民</a></li>
+<li class=list-inline-item><a href=/tags/%E6%98%9F%E9%99%85%E7%A7%BB%E6%B0%91%E4%B8%AD%E5%BF%83iic>星际移民中心(IIC)</a></li>
+<li class=list-inline-item><a href=/tags/%E6%98%9F%E9%99%85%E7%A7%BB%E6%B0%91%E5%B1%80iia>星际移民局(IIA)</a></li>
+<li class=list-inline-item><a href=/tags/%E8%81%94%E5%90%88%E5%9B%BD>联合国</a></li>
 </ul>
 <h3 class="h4 mb-2">
 <a class=post-title href=/news/%E8%81%94%E5%90%88%E5%9B%BD%E5%86%B3%E5%AE%9A%E6%88%90%E7%AB%8B%E6%98%9F%E9%99%85%E7%A7%BB%E6%B0%91%E5%B1%80/ title=联合国决定成立星际移民局>联合国决定成立星际移民局</a>
@@ -258,9 +258,9 @@
 <article class="card post-card">
 <div class="card-body mb-3">
 <ul class="card-meta-tag list-inline mb-1">
-<li class=list-inline-item><a href=tags/%E5%9E%84%E6%96%AD>垄断</a></li>
-<li class=list-inline-item><a href=tags/%E5%9B%BD%E9%99%85%E7%AB%9E%E4%BA%89%E7%BD%91%E7%BB%9Cicn>国际竞争网络(ICN)</a></li>
-<li class=list-inline-item><a href=tags/%E8%81%94%E5%90%88%E8%A1%8C%E6%98%9F/%E8%81%94%E5%90%88%E5%B0%8F%E8%A1%8C%E6%98%9Fupi/uai>联合行星/联合小行星(UPI/UAI )</a></li>
+<li class=list-inline-item><a href=/tags/%E5%9E%84%E6%96%AD>垄断</a></li>
+<li class=list-inline-item><a href=/tags/%E5%9B%BD%E9%99%85%E7%AB%9E%E4%BA%89%E7%BD%91%E7%BB%9Cicn>国际竞争网络(ICN)</a></li>
+<li class=list-inline-item><a href=/tags/%E8%81%94%E5%90%88%E8%A1%8C%E6%98%9F/%E8%81%94%E5%90%88%E5%B0%8F%E8%A1%8C%E6%98%9Fupi/uai>联合行星/联合小行星(UPI/UAI )</a></li>
 </ul>
 <h3 class="h4 mb-2">
 <a class=post-title href=/news/uai/ title="联合小行星垄断行径遭曝光： UAI恐陷入信誉危机">联合小行星垄断行径遭曝光： UAI恐陷入信誉危机</a>
