--- a/search/index.html
+++ b/search/index.html
@@ -6,8 +6,8 @@
 <meta name=description content="this is meta description">
 <meta name=author content="我是作者">
 <meta name=generator content="Hugo 0.89.4">
-<link rel="shortcut icon" href=images/favicon/favicon.ico type=image/x-icon>
-<link rel=icon href=images/favicon/favicon.ico type=image/x-icon>
+<link rel="shortcut icon" href=/images/favicon/favicon.ico type=image/x-icon>
+<link rel=icon href=/images/favicon/favicon.ico type=image/x-icon>
 <meta property="og:title" content="Search Result">
 <meta property="og:description" content="this is meta description">
 <meta property="og:type" content="article">
@@ -31,7 +31,7 @@
 </button>
 </div>
 <a class="navbar-brand mr-0" href=/>
-<img height=26px src=images/InterImm_logo.png alt=新闻>
+<img height=26px src=/images/InterImm_logo.png alt=新闻>
 </a>
 </div>
 <div class="d-none d-md-block">
@@ -125,7 +125,7 @@
     </div>
   </script>
 </div>
-<script>var indexURL="index.json"</script>
+<script>var indexURL="/index.json"</script>
 </div>
 </div>
 <div class="container-fluid px-3 px-lg-4">
