--- a/about/index.html
+++ b/about/index.html
@@ -97,7 +97,7 @@
 </div>
 <div class="col-lg-7 mt-5 mt-lg-0">
 <p class="h5 mb-3">关于我们</p>
-<h3 class="font-primary text-dark mb-0" style=line-height:1.5>阿巴阿巴</h3>
+<h3 class="font-primary text-dark mb-0" style=line-height:1.5>俯瞰昆仑，仰望星辰</h3>
 </div>
 </div>
 <div class="content mb-5 pb-1"><p>这是一段描述</p>
