--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 <div class="author-banner bg-primary-light text-center d-flex flex-column align-items-center justify-content-center">
 <img loading=lazy class="mb-4 rounded-circle w-100" style=max-width:280px src=/images/InterImm_logo.png alt=Author>
 <p class="text-uppercase small mb-2">我的名字</p>
-<h1 class="h3 text-primary font-primary mb-3">这是新闻</h1>
-<div class="mb-0 mx-auto" style=max-width:460px>阿巴阿巴 <a href=/about/ aria-label="About me" class="text-underline d-inline-block">继续阅读</a></div>
+<h1 class="h3 text-primary font-primary mb-3">星辰通讯社</h1>
+<div class="mb-0 mx-auto" style=max-width:460px>俯瞰昆仑，仰望星辰 <a href=/about/ aria-label="About me" class="text-underline d-inline-block">继续阅读</a></div>
 </div>
 </div>
 <div class="col-lg-8 col-xl-9">
@@ -119,7 +119,7 @@
 <ul class="card-meta list-inline mb-0">
 <li class=list-inline-item>
 <span class=text-light>by:</span>
-<a href=/about/ class=card-meta-author>这是新闻</a>
+<a href=/about/ class=card-meta-author>星辰通讯社</a>
 </li>
 <li class=list-inline-item>
 <span class=card-meta-date>Jan 21, 2022</span>
@@ -145,7 +145,7 @@
 <ul class="card-meta list-inline mb-0">
 <li class=list-inline-item>
 <span class=text-light>by:</span>
-<a href=/about/ class=card-meta-author>这是新闻</a>
+<a href=/about/ class=card-meta-author>星辰通讯社</a>
 </li>
 <li class=list-inline-item>
 <span class=card-meta-date>Jan 21, 2022</span>
@@ -173,7 +173,7 @@
 <ul class="card-meta list-inline mb-0">
 <li class=list-inline-item>
 <span class=text-light>by:</span>
-<a href=/about/ class=card-meta-author>这是新闻</a>
+<a href=/about/ class=card-meta-author>星辰通讯社</a>
 </li>
 <li class=list-inline-item>
 <span class=card-meta-date>Jan 21, 2022</span>
@@ -199,7 +199,7 @@
 <ul class="card-meta list-inline mb-0">
 <li class=list-inline-item>
 <span class=text-light>by:</span>
-<a href=/about/ class=card-meta-author>这是新闻</a>
+<a href=/about/ class=card-meta-author>星辰通讯社</a>
 </li>
 <li class=list-inline-item>
 <span class=card-meta-date>Jan 21, 2022</span>
@@ -221,7 +221,7 @@
 <ul class="card-meta list-inline mb-0">
 <li class=list-inline-item>
 <span class=text-light>by:</span>
-<a href=/about/ class=card-meta-author>这是新闻</a>
+<a href=/about/ class=card-meta-author>星辰通讯社</a>
 </li>
 <li class=list-inline-item>
 <span class=card-meta-date>Jan 21, 2022</span>
@@ -250,7 +250,7 @@
 <ul class="card-meta list-inline mb-0">
 <li class=list-inline-item>
 <span class=text-light>by:</span>
-<a href=/about/ class=card-meta-author>这是新闻</a>
+<a href=/about/ class=card-meta-author>星辰通讯社</a>
 </li>
 <li class=list-inline-item>
 <span class=card-meta-date>Jan 21, 2022</span>
@@ -277,7 +277,7 @@
 <ul class="card-meta list-inline mb-0">
 <li class=list-inline-item>
 <span class=text-light>by:</span>
-<a href=/about/ class=card-meta-author>这是新闻</a>
+<a href=/about/ class=card-meta-author>星辰通讯社</a>
 </li>
 <li class=list-inline-item>
 <span class=card-meta-date>Jan 21, 2022</span>
@@ -305,7 +305,7 @@ Q:准备去火星移民 …</p>
 <ul class="card-meta list-inline mb-0">
 <li class=list-inline-item>
 <span class=text-light>by:</span>
-<a href=/about/ class=card-meta-author>这是新闻</a>
+<a href=/about/ class=card-meta-author>星辰通讯社</a>
 </li>
 <li class=list-inline-item>
 <span class=card-meta-date>Jan 21, 2022</span>
