--- a/about/index.html
+++ b/about/index.html
@@ -108,6 +108,7 @@
 <p>基于<a href=https://interimm.org>星际移民局</a>的二次创作(´▽｀)</p>
 <p>若无特殊说明，遵守<a href=https://creativecommons.org/licenses/by-sa/4.0/>CC BY-SA 4.0</a>协议(´･ω･`)</p>
 <p>超级感谢<a href=https://github.com/emptymalei>章鱼喵</a>老师做的Hugo模板，感谢！！！！！！！</p>
+<p>（其实应该说整个网站都是老师搭的我就是fork过来了而已XD）</p>
 <p>没有Logo就先挂IIA的吧OvO</p>
 <p>我的文笔不行写得很烂文章不分主次毫无逻辑等等等等的真的很抱歉，在学了在学了QAQ</p>
 </div>
