deploy: f3952df66ef2d002a8ae33fac30f221456e97982

--- a/search/index.html
+++ b/search/index.html
@@ -4,7 +4,7 @@
 <title>Search Result</title>
 <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=5">
 <meta name=description content="this is meta description">
-<meta name=author content="我是作者">
+<meta name=author content="星辰通讯社">
 <meta name=generator content="Hugo 0.89.4">
 <link rel="shortcut icon" href=/images/favicon/favicon.ico type=image/x-icon>
 <link rel=icon href=/images/favicon/favicon.ico type=image/x-icon>
