--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!doctype html><html lang=en-us>
 <head>
 <meta charset=utf-8>
-<title>新闻</title>
+<title>星辰通讯社</title>
 <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=5">
-<meta name=description content="这是描述">
-<meta name=author content="我是作者">
+<meta name=description content="俯瞰昆仑，仰望星辰">
+<meta name=author content="星辰通讯社">
 <meta name=generator content="Hugo 0.89.4">
 <link rel="shortcut icon" href=/images/favicon/favicon.ico type=image/x-icon>
 <link rel=icon href=/images/favicon/favicon.ico type=image/x-icon>
-<meta property="og:title" content="新闻">
-<meta property="og:description" content="这是描述">
+<meta property="og:title" content="星辰通讯社">
+<meta property="og:description" content="俯瞰昆仑，仰望星辰">
 <meta property="og:type" content="website">
 <meta property="og:url" content="/">
 <link rel=preconnect href=https://fonts.gstatic.com>
