deploy: 0fccd9ad11e6d15a04436d12cc8ca105b13dbe5e

--- a/search/index.html
+++ b/search/index.html
@@ -53,12 +53,11 @@
 <a class=nav-link href=/about/>关于</a>
 </li>
 <li class=nav-item>
-<a class=nav-link href=/news/>新闻</a>
-</li>
-<li class=nav-item>
 <a class=nav-link href=# type=button data-toggle=collapse data-target=#dropdown-menu-02>更多</a>
 <ul id=dropdown-menu-02 class="collapse list-unstyled" data-parent=#accordionMenu>
-<li><a href=/elements/>编辑帮助</a></li>
+<li><a href=/news/>所有文章</a></li>
+<li><a href=/archived-news/>新闻归档</a></li>
+<li><a href=/others/>其他文章</a></li>
 </ul>
 </li>
 </ul>
