deploy: ea86084ce3cd7b5831bc024ba832ad4ccaee0ac7

--- a/others/index.html
+++ b/others/index.html
@@ -9,7 +9,7 @@
 <link rel="shortcut icon" href=/images/favicon/favicon.ico type=image/x-icon>
 <link rel=icon href=/images/favicon/favicon.ico type=image/x-icon>
 <meta property="og:title" content="其他文章">
-<meta property="og:description" content="点击文章名即可跳转至相关页面 震惊！99%的人都不知道，办理火星移民手续时要这么做！男人看了沉默，女人看了流泪&mldr;.. 2078.4.8">
+<meta property="og:description" content="震惊！99%的人都不知道，办理火星移民手续时要这么做！男人看了沉默，女人看了流泪&mldr;.. 2078.4.8">
 <meta property="og:type" content="article">
 <meta property="og:url" content="/others/"><meta property="article:section" content>
 <link rel=preconnect href=https://fonts.gstatic.com>
@@ -82,7 +82,6 @@
 </div>
 </section></div>
 <div class=content>
-<h3 id=点击文章名即可跳转至相关页面>点击文章名即可跳转至相关页面</h3>
 <p><a href=https://starspress.org/news/iia-q-and-a/ title=震惊！99%的人都不知道，办理火星移民手续时要这么做！男人看了沉默，女人看了流泪.....>震惊！99%的人都不知道，办理火星移民手续时要这么做！男人看了沉默，女人看了流泪&mldr;..</a> 2078.4.8</p>
 </div>
 </div>
