deploy: 4ad3860aad7278266e26e37431c6391c78b912c8

--- a/archived-news/index.html
+++ b/archived-news/index.html
@@ -9,10 +9,11 @@
 <link rel="shortcut icon" href=/images/favicon/favicon.ico type=image/x-icon>
 <link rel=icon href=/images/favicon/favicon.ico type=image/x-icon>
 <meta property="og:title" content="新闻归档">
-<meta property="og:description" content="点击文章名即可跳转至相关页面 联合小行星垄断行径遭曝光： UAI恐陷入信誉危机 2057.11.22
+<meta property="og:description" content="联合小行星垄断行径遭曝光： UAI恐陷入信誉危机 2057.11.22
 联合国决定成立星际移民局 2062.7.23
 火星移民登记正式对公众开放 2078.4.7
-四大商会合并 2102.6.20">
+四大商会合并 2102.6.20
+简讯：罗马教宗访问伊希地，并发表演讲 2133.">
 <meta property="og:type" content="article">
 <meta property="og:url" content="/archived-news/"><meta property="article:section" content>
 <link rel=preconnect href=https://fonts.gstatic.com>
@@ -85,8 +86,7 @@
 </div>
 </section></div>
 <div class=content>
-<p><strong>点击文章名即可跳转至相关页面</strong>
-<a href=https://starspress.org/news/m-571122/ title="联合小行星垄断行径遭曝光： UAI恐陷入信誉危机">联合小行星垄断行径遭曝光： UAI恐陷入信誉危机</a> 2057.11.22</p>
+<p><a href=https://starspress.org/news/m-571122/ title="联合小行星垄断行径遭曝光： UAI恐陷入信誉危机">联合小行星垄断行径遭曝光： UAI恐陷入信誉危机</a> 2057.11.22</p>
 <p><a href=https://starspress.org/news/m-620723/ title=联合国决定成立星际移民局>联合国决定成立星际移民局</a> 2062.7.23</p>
 <p><a href=http://starspress.org/news/m-780407>火星移民登记正式对公众开放</a> 2078.4.7</p>
 <p><a href=http://starspress.org/news/m-020620>四大商会合并</a> 2102.6.20</p>
