deploy: 8d4d25d1185537debb9195cb28fe9da92b84b713

--- a/草稿/index.html
+++ b/草稿/index.html
@@ -12,7 +12,7 @@
 <meta property="og:description" content="骰子已经掷下，只能继续前行 ————盖乌斯 · 尤里乌斯 · 凯撒（49 B.C.）
  矛盾初现 相对于地球，火星一直是一个较为独立的政治、经济实体。丰富的矿产资源和大面积尚未开发的处女地为火星工商业发展提供了丰富的养料。火星地球化以来，火星的生态环境得到了飞跃式改善。全球性宜居的环境生态条件下，旧的城市规模得以不断扩大，同时一座座新的城市拔地而起。一个又一个集中而开放的城市代替了曾经封闭又寥若晨星的火星城，成为了火星工商业的温床。">
 <meta property="og:type" content="article">
-<meta property="og:url" content="/draft/"><meta property="article:section" content>
+<meta property="og:url" content="/%E8%8D%89%E7%A8%BF/"><meta property="article:section" content>
 <link rel=preconnect href=https://fonts.gstatic.com>
 <style crossorigin=anonymous media=all type=text/css integrity="sha512-qyblVbr/dDFdKlG55r7ox6G8HGyWHekJs0pbTmP7pKkWLLAJEZ+06ud2fRrFyEjfb/1CwoIOoJK3cE5hreC8JQ==">/*!* Bootstrap v4.5.0 (https://getbootstrap.com/)
 * Copyright 2011-2020 The Bootstrap Authors
