deploy: 02103aabc2d606bab7ce701b76ad2125fcd7089c

--- a/drafts/index.html
+++ b/drafts/index.html
@@ -1,17 +1,17 @@
 <!doctype html><html lang=en-us>
 <head>
 <meta charset=utf-8>
-<title>星际解密（InterplanetaryLeaks )</title>
+<title>Drafts</title>
 <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=5">
 <meta name=description content="俯瞰昆仑，仰望星辰">
 <meta name=author content="星辰通讯社">
 <meta name=generator content="Hugo 0.89.4">
 <link rel="shortcut icon" href=/images/favicon/favicon.ico type=image/x-icon>
 <link rel=icon href=/images/favicon/favicon.ico type=image/x-icon>
-<meta property="og:title" content="星际解密（InterplanetaryLeaks )">
+<meta property="og:title" content="Drafts">
 <meta property="og:description" content="俯瞰昆仑，仰望星辰">
 <meta property="og:type" content="website">
-<meta property="og:url" content="/tags/%E6%98%9F%E9%99%85%E8%A7%A3%E5%AF%86interplanetaryleaks/">
+<meta property="og:url" content="/drafts/">
 <link rel=preconnect href=https://fonts.gstatic.com>
 <style crossorigin=anonymous media=all type=text/css integrity="sha512-qyblVbr/dDFdKlG55r7ox6G8HGyWHekJs0pbTmP7pKkWLLAJEZ+06ud2fRrFyEjfb/1CwoIOoJK3cE5hreC8JQ==">/*!* Bootstrap v4.5.0 (https://getbootstrap.com/)
 * Copyright 2011-2020 The Bootstrap Authors
@@ -77,40 +77,19 @@
 <div class="row justify-content-center">
 <section class="col-12 page-header">
 <div class="section my-4 py-5">
-<h2 class="h4 title">显示内容 <mark>星际解密（InterplanetaryLeaks )</mark> 标签</h2>
+<h2 class="h4 title">Drafts</h2>
 </div>
 </section>
-<div class=col-12>
+<section class=section>
+<div class=container>
 <div class=row>
-<div class="col-lg-4 col-md-4 col-sm-6">
-<article class="card post-card">
-<div class="card-body mb-3">
-<ul class="card-meta-tag list-inline mb-1">
-<li class=list-inline-item><a href=/tags/%E6%98%9F%E9%99%85%E8%A7%A3%E5%AF%86interplanetaryleaks>星际解密（InterplanetaryLeaks )</a></li>
-<li class=list-inline-item><a href=/tags/%E5%8D%97%E6%B2%B3%E5%9F%8E>南河城</a></li>
-<li class=list-inline-item><a href=/tags/%E8%81%94%E5%90%88%E8%A1%8C%E6%98%9Fupi>联合行星(UPI)</a></li>
-</ul>
-<h3 class="h4 mb-2">
-<a class=post-title href=/m-060311/ title="UPI 贪污行为遭曝出">UPI 贪污行为遭曝出</a>
-</h3>
-<p class=mb-0>星辰社 南河城 2106 年3 月11 日（火星73 年6 月18 日） 电
-一篇来自星际解密（InterplanetaryLeaks, 下 …</p>
-</div>
-<div class=card-footer>
-<ul class="card-meta list-inline mb-0">
-<li class=list-inline-item>
-<span class=text-light>by:</span>
-<a href=/about/ class=card-meta-author>星辰通讯社</a>
-</li>
-<li class=list-inline-item>
-<span class=card-meta-date>Jan 21, 2022</span>
-</li>
-</ul>
-</div>
-</article>
+<div class="col-lg-10 mx-auto">
+<div class=content>
 </div>
 </div>
 </div>
+</div>
+</section>
 </div>
 </div>
 <div class="container-fluid px-3 px-lg-4">
