deploy: afeb04413241214a08fc0d3cd1252dc2e43784ae

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <a class=post-title href=/news/m-060311/ title=星际解密曝光联合行星贪污行为>星际解密曝光联合行星贪污行为</a>
 </h3>
 <p class=mb-0>星辰社 2106 年3 月11 日（火星73 年6 月18 日） 电
-一篇来自[星际解密（InterplanetaryLeaks, 下文简 …</p>
+一篇来自星际解密（InterplanetaryLeaks, 下文简 …</p>
 </div>
 <div class=card-footer>
 <ul class="card-meta list-inline mb-0">
