deploy: 01326ec8918b6058618be9af792b1a15f008ae19

--- a/draft/index.html
+++ b/draft/index.html
@@ -9,9 +9,10 @@
 <link rel="shortcut icon" href=/images/favicon/favicon.ico type=image/x-icon>
 <link rel=icon href=/images/favicon/favicon.ico type=image/x-icon>
 <meta property="og:title" content>
-<meta property="og:description" content="骰子已经掷下，只能继续前行。
-————盖乌斯 · 尤里乌斯 · 凯撒（49 B.C.）
- 矛盾初现 相对于地球，火星一直是一个较为独立的政治、经济实体。丰富的矿产资源和大面积尚未开发的处女地为火星工商业发展提供了丰富的养料。火星地球化以来，火星的生态环境得到了飞跃式改善。全球性宜居的环境生态条件下，旧的城市规模得以不断扩大，同时一座座新的城市拔地而起。一个又一个集中而开放的城市代替了曾经封闭又寥若晨星的火星城，成为了火星工商业的温床。">
+<meta property="og:description" content="地球是人类的摇篮，但人类不可能永远被束缚在摇篮里。
+———— 齐奥尔科夫斯基(1857 - 1935)
+ 矛盾初现 相对于地球，火星一直是一个较为独立的政治、经济实体。丰富的矿产资源和大面积尚未开发的处女地为火星工商业发展提供了丰富的养料。火星地球化以来，火星的生态环境得到了飞跃式改善。全球性宜居的环境生态条件下，旧的城市规模得以不断扩大，同时一座座新的城市拔地而起。一个又一个集中而开放的城市代替了曾经封闭又寥若晨星的火星城，成为了火星工商业的温床。
+火星移民的前中期，建设火星的重任一直由地球企业担负着。受不同商会控制的地球企业把持火星经济的命脉，火星的经济发展因此受到严重阻碍。火星地球化期间，出于管理便利，许多地球商会决定给予位于火星的地球企业相对独立的自主经营权。随着时间的流逝，这一类企业也逐渐摆脱了地球的控制，扎根于火星的土壤，成为火星经济社会发展的重要力量。而借着地球化的春风，许多火星本土企业蓬勃发展并得以壮大。这些企业在当地拥有了不容小觑的话语权。">
 <meta property="og:type" content="article">
 <meta property="og:url" content="/draft/"><meta property="article:section" content>
 <link rel=preconnect href=https://fonts.gstatic.com>
@@ -85,8 +86,8 @@
 </section></div>
 <div class=content>
 <blockquote>
-<p>骰子已经掷下，只能继续前行。</p>
-<p>————盖乌斯 · 尤里乌斯 · 凯撒（49 B.C.）</p>
+<p>地球是人类的摇篮，但人类不可能永远被束缚在摇篮里。</p>
+<p>———— 齐奥尔科夫斯基(1857 - 1935)</p>
 </blockquote>
 <h2 id=矛盾初现>矛盾初现</h2>
 <p>相对于地球，火星一直是一个较为独立的政治、经济实体。丰富的矿产资源和大面积尚未开发的处女地为火星工商业发展提供了丰富的养料。火星地球化以来，火星的生态环境得到了飞跃式改善。全球性宜居的环境生态条件下，旧的城市规模得以不断扩大，同时一座座新的城市拔地而起。一个又一个集中而开放的城市代替了曾经封闭又寥若晨星的火星城，成为了火星工商业的温床。</p>
