deploy: bc6d941887c933d7a2614c1c8647452c7ec7335d

--- a/draft/index.html
+++ b/draft/index.html
@@ -104,9 +104,9 @@
 <p>身为战争的直接受害者，火星方面一直在避免冲突的发生。在22世纪中期，出于自卫需要，火星各城建立起了独立于各个势力的武装力量。数百年火星的工业积累和地球化以来经济的迅速发展给火星带来了极大的机遇。火星迅速建立起一支强大的军队。尽管如此，火星仍然无法完全摆脱地球的阴霾。在与UPI 的实力对比中，火星处于相对劣势。</p>
 <p>在地火航线冲突爆发的消息传到地火两星后，除了火星与UPI 的官方谈判外，火星各界以及许多旅居地球的火星人士也试图游说地球上的各股势力，试图避免此次冲突扩大。令人惋惜的是，他们的努力随着谈判的破裂而破灭。</p>
 <h3 id=地球>地球</h3>
-<p>在战争中，地球大多数政权一直保持着观望态度。</p>
+<p>在战争中，地球大多数政权一直保持着观望态度。UPI 富可敌国的体量与火星当局在地球巨大的影响力使得小国畏于表达自身在此次战争中的立场；而包括欧洲联盟在内的几大超级大国却一致地保持沉默，同时向参战双方提供物资技术支持以从中获利。</p>
 <h3 id=星际移民局iia>星际移民局（IIA）</h3>
-<p>面对这次史无前例的冲突，IIA 陷入了一个极其尴尬的地位。一方面，IIA 在暗地上接受着UPI 的资金技术援助；另一方面，IIA 在火星的工作受到了火星政府的鼎力支持；而作为它形式上的上级，联合国则一直严守着中立的底线。</p>
+<p>面对这次史无前例的冲突，IIA 陷入了一个极其尴尬的地位。一方面，IIA 在暗地上接受着UPI 的资金技术援助；另一方面，IIA在火星的工作受到了火星当局的鼎力支持；而作为它形式上的上级，联合国则一直严守着中立的底线。经过剧烈的内部派系斗争，</p>
 <hr>
 <h3 id=todo>Todo:</h3>
 <p>1.写完设定&mldr;..（esp. 战斗过程）</p>
