--- a/draft/index.html
+++ b/draft/index.html
@@ -112,6 +112,13 @@
 <h3 id=todo>Todo:</h3>
 <p>1.写完设定&mldr;..（esp. 战斗过程）</p>
 <p>2.天钩 Sky-hook 说不定有什么用</p>
+<hr>
+<p><img src=/images/img-0275.png alt></p>
+<p><img src=/images/img-0276.png alt></p>
+<p><img src=/images/img-0277.png alt></p>
+<p><img src=/images/img-0279.png alt></p>
+<p><img src=/images/img-0280.png alt></p>
+<p><img src=/images/img-0281.png alt></p>
 </div>
 </div>
 </div>
