deploy: 72b3382420f3554909b2aebece8b1e0204899dd2

--- a/draft/index.html
+++ b/draft/index.html
@@ -113,7 +113,7 @@
 <h4 id=太阳系其他殖民地>太阳系其他殖民地</h4>
 <h3 id=地火议和与拉格朗日公约的签订>地火议和与《拉格朗日公约》的签订</h3>
 <h4 id=heading></h4>
-<h2 id=自一战失利以来-upi-内部的反战情绪日益增长而前线的雇佣兵不再愿为-upi-卖命军心涣散财政上的连年赤字更加加重了后勤的负担此外由于战争期间地火贸易额大幅下降作为战争发起者的-upi-遭到了国际社会的一致声讨在这种内外交困的情形下年月日-upi-正式向火星递交投降书>自████一战失利以来， UPI 内部的反战情绪日益增长。而前线的雇佣兵不再愿为 UPI 卖命，军心涣散。财政上的连年赤字更加加重了后勤的负担。此外，由于战争期间地火贸易额大幅下降，作为战争发起者的 UPI 遭到了国际社会的一致声讨。在这种内外交困的情形下，████年█月█日， UPI 正式向火星递交投降书。</h2>
+<h2 id=自一战失利以来-upi-内部的反战情绪日益增长而前线的雇佣兵不再愿为-upi-卖命军心涣散财政上的连年赤字更加加重了后勤的负担此外由于战争期间地火贸易额大幅下降作为战争发起者的-upi-遭到了国际社会的一致声讨在这种内外交困的情形下年月日-upi-正式向火星求和以结束战争>自████一战失利以来， UPI 内部的反战情绪日益增长。而前线的雇佣兵不再愿为 UPI 卖命，军心涣散。财政上的连年赤字更加加重了后勤的负担。此外，由于战争期间地火贸易额大幅下降，作为战争发起者的 UPI 遭到了国际社会的一致声讨。在这种内外交困的情形下，████年█月█日， UPI 正式向火星求和以结束战争。</h2>
 <h3 id=todo>Todo:</h3>
 <p>1.写完设定&mldr;..（esp. 战斗过程）</p>
 <p>2.天钩 Sky-hook 说不定有什么用</p>
