deploy: 00ca4516b7084a3777360a1d29fb9badf88957f1

--- a/draft/index.html
+++ b/draft/index.html
@@ -112,8 +112,8 @@
 <p>战争期间， IIA 内部的派系矛盾也愈发激烈。一部分人认为，战时 IIA 处理对外关系的首要原则应该是明哲保身，避免站队冲突中的任何一方，保证 IIA 的利益最大化。而另一派选择了他们的理想。 IIA 在██世纪公布了下一阶段的发展计划，决定投入大量资金进行系外天体探索。这些人为了计划的稳步实施，主张调和地火间的矛盾，团结人类在全太阳系的力量。</p>
 <h4 id=太阳系其他殖民地>太阳系其他殖民地</h4>
 <h3 id=地火议和与拉格朗日公约的签订>地火议和与《拉格朗日公约》的签订</h3>
-<h4 id=title>Title</h4>
-<h2 id=自一战失利以来-upi-内部的反战情绪日益增长而前线的雇佣兵不再愿为-upi-卖命军心涣散财政上的连年赤字更加加重了后勤的负担此外由于战争期间地火贸易额大幅下降作为战争发起者的-upi-遭到了国际社会的一致声讨在这种内外交困的情形下年月日-upi-正式向火星求和以结束战争>自████一战失利以来， UPI 内部的反战情绪日益增长。而前线的雇佣兵不再愿为 UPI 卖命，军心涣散。财政上的连年赤字更加加重了后勤的负担。此外，由于战争期间地火贸易额大幅下降，作为战争发起者的 UPI 遭到了国际社会的一致声讨。在这种内外交困的情形下，████年█月█日， UPI 正式向火星求和以结束战争。</h2>
+<h4 id=heading></h4>
+<h2 id=自一战失利以来-upi-内部的反战情绪日益增长而前线的雇佣兵不再愿为-upi-卖命军心涣散财政上的连年赤字更加加重了后勤的负担此外由于战争期间地火贸易额大幅下降作为战争发起者的-upi-遭到了国际社会的一致声讨在这种内外交困的情形下年月日-upi-正式向火星递交投降书>自████一战失利以来， UPI 内部的反战情绪日益增长。而前线的雇佣兵不再愿为 UPI 卖命，军心涣散。财政上的连年赤字更加加重了后勤的负担。此外，由于战争期间地火贸易额大幅下降，作为战争发起者的 UPI 遭到了国际社会的一致声讨。在这种内外交困的情形下，████年█月█日， UPI 正式向火星递交投降书</h2>
 <h3 id=todo>Todo:</h3>
 <p>1.写完设定&mldr;..（esp. 战斗过程）</p>
 <p>2.天钩 Sky-hook 说不定有什么用</p>
